# clockify-to-time-sheet

./: .gitignore  Cargo.toml  LICENSE  README.md  config_template.toml
src/: clockify.rs  lib.rs  main.rs  transform.rs  writer.rs
